feat(proxy): complete phase2 protocol stack and e2e coverage
Finalize Phase 2 by shipping VLESS Vision/Reality and Hysteria2 TCP+UDP paths, add UDP transport plumbing with NAT lifecycle cleanup, and provide protocol-level end-to-end tests to verify behavior across dispatcher and outbound implementations.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,11 @@ http = "1"
 async-trait = "0.1"
 rand = "0.8"
 futures-lite = "2"
+x25519-dalek = { version = "2", features = ["static_secrets"] }
+hkdf = "0.12"
+sha2 = "0.10"
+hmac = "0.12"
+aes-gcm = "0.10"
+
+[dev-dependencies]
+rcgen = "0.13"
