--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,15 @@ hkdf = "0.12"
 sha2 = "0.10"
 hmac = "0.12"
 aes-gcm = "0.10"
+maxminddb = "0.24"
+tokio-tungstenite = "0.26"
+tokio-util = { version = "0.7", features = ["rt"] }
+axum = { version = "0.8", features = ["ws"] }
+serde_json = "1"
+tower-http = { version = "0.6", features = ["cors"] }
+hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls"] }
+futures-util = "0.3"
 
 [dev-dependencies]
 rcgen = "0.13"
+reqwest = { version = "0.12", features = ["json"] }
