feat(proxy): implement Phase 5 protocol expansion and operational enhancements (285 tests)
Phase 5A - Protocol Expansion:
- Shadowsocks AEAD outbound (aes-128-gcm, aes-256-gcm, chacha20-ietf-poly1305) with TCP/UDP support
- Trojan outbound with SHA224 auth, TCP/UDP support, reuses StreamTransport for TLS/WS/H2/gRPC
- Protocol integration tests (13 tests covering registration, crypto roundtrips, key derivation)

Phase 5B - Inbound Enhancement + API Completion:
- Mixed inbound handler (SOCKS5 + HTTP CONNECT on same port via first-byte detection)
- /logs WebSocket real-time log streaming with LogBroadcaster + custom tracing Layer

Phase 5C - Operational Improvements:
- HTTP rule provider actual download with local cache and staleness checking
- DNS caching layer (TTL-based, configurable cache_size/cache_ttl)
- Connection statistics enhancement (source IP/port, network type in /connections API)
- Integration tests for DNS cache and Mixed inbound (6 tests)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,11 @@ tower-http = { version = "0.6", features = ["cors"] }
 hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls"] }
 futures-util = "0.3"
 h2 = "0.4"
+chacha20poly1305 = "0.10"
+sha1 = "0.10"
+md-5 = "0.10"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
 
 [dev-dependencies]
 rcgen = "0.13"
-reqwest = { version = "0.12", features = ["json"] }
 tempfile = "3"
