--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,14 @@ tokio-util = { version = "0.7", features = ["rt"] }
 axum = { version = "0.8", features = ["ws"] }
 serde_json = "1"
 tower-http = { version = "0.6", features = ["cors"] }
-hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls"] }
+hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-quic"] }
 futures-util = "0.3"
 h2 = "0.4"
 chacha20poly1305 = "0.10"
 sha1 = "0.10"
+sha3 = "0.10"
+blake2 = "0.10"
+base64 = "0.22"
 md-5 = "0.10"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
 
