--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ tokio-tungstenite = "0.26"
 tokio-util = { version = "0.7", features = ["rt"] }
 axum = { version = "0.8", features = ["ws"] }
 serde_json = "1"
-tower-http = { version = "0.6", features = ["cors"] }
+tower-http = { version = "0.6", features = ["cors", "fs"] }
 hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-quic"] }
 futures-util = "0.3"
 h2 = "0.4"
@@ -45,7 +45,27 @@ blake2 = "0.10"
 base64 = "0.22"
 md-5 = "0.10"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
+socket2 = { version = "0.5", features = ["all"] }
+blake3 = "1.8.3"
+clap = { version = "4", features = ["derive"] }
+notify = { version = "8.2.0", features = ["macos_fsevent"] }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+libc = "0.2"
 
 [dev-dependencies]
 rcgen = "0.13"
 tempfile = "3"
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "router_match"
+harness = false
+
+[[bench]]
+name = "dns_resolve"
+harness = false
+
+[[bench]]
+name = "mux_throughput"
+harness = false
