--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ webpki-roots = "0.26"
 http = "1"
 async-trait = "0.1"
 rand = "0.8"
+regex = "1"
 futures-lite = "2"
 x25519-dalek = { version = "2", features = ["static_secrets"] }
 hkdf = "0.12"
@@ -47,7 +48,7 @@ tokio-util = { version = "0.7", features = ["rt"] }
 axum = { version = "0.8", features = ["ws"] }
 serde_json = "1"
 tower-http = { version = "0.6", features = ["cors", "fs"] }
-hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-quic"] }
+hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-quic", "dns-over-h3"] }
 futures-util = "0.3"
 h2 = "0.4"
 chacha20poly1305 = "0.10"
@@ -55,6 +56,7 @@ sha1 = "0.10"
 sha3 = "0.10"
 blake2 = "0.10"
 base64 = "0.22"
+flate2 = "1"
 md-5 = "0.10"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
 socket2 = { version = "0.5", features = ["all"] }
