--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,9 @@ reqwest = { version = "0.12", default-features = false, features = ["json", "rus
 socket2 = { version = "0.5", features = ["all"] }
 blake3 = "1.8.3"
 log = "0.4"
+smoltcp = { version = "0.12", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
+p256 = { version = "0.13", features = ["ecdsa", "pem"] }
+rcgen = "0.13"
 
 # CLI-only deps (excluded on Android)
 clap = { version = "4", features = ["derive"], optional = true }
@@ -84,7 +87,6 @@ ssh-key = { version = "0.6", optional = true }
 libc = "0.2"
 
 [dev-dependencies]
-rcgen = "0.13"
 tempfile = "3"
 criterion = { version = "0.5", features = ["html_reports"] }
 
