--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,8 @@ log = "0.4"
 smoltcp = { version = "0.12", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "proto-ipv6", "socket-tcp", "socket-udp"] }
 p256 = { version = "0.13", features = ["ecdsa", "pem"] }
 rcgen = "0.13"
+crypto_box = "0.9"
+rustls-pemfile = "2"
 
 # CLI-only deps (excluded on Android)
 clap = { version = "4", features = ["derive"], optional = true }
