--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ tokio-util = { version = "0.7", features = ["rt"] }
 axum = { version = "0.8", features = ["ws"] }
 serde_json = "1"
 tower-http = { version = "0.6", features = ["cors", "fs"] }
-hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls", "dns-over-quic", "dns-over-h3"] }
+hickory-resolver = { version = "0.24", features = ["dns-over-rustls", "dns-over-https-rustls"] }
 futures-util = "0.3"
 h2 = "0.4"
 chacha20poly1305 = "0.10"
