--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ config.yaml
 .claude/
 CLAUDE.md
 AGENT.md
+
+# Android / Gradle
+android/.gradle/
+android/app/build/
+android/build/
+android/local.properties
+*.apk
+*.aab
+*.iml
+.idea/
