--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,14 +19,14 @@
     <application
         android:enableOnBackInvokedCallback="true"
         android:allowBackup="true"
-        android:name=".SingBoxApplication"
+        android:name=".OpenWorldApplication"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SingBoxAndroid"
+        android:theme="@style/Theme.OpenWorldAndroid"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
@@ -34,7 +34,7 @@
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:theme="@style/Theme.SingBoxAndroid">
+            android:theme="@style/Theme.OpenWorldAndroid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -70,7 +70,7 @@
             android:exported="true"
             android:excludeFromRecents="true"
             android:process=":bg"
-            android:theme="@style/Theme.SingBoxAndroid.Transparent">
+            android:theme="@style/Theme.OpenWorldAndroid.Transparent">
             <intent-filter>
                 <action android:name="com.openworld.app.action.TOGGLE" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -78,7 +78,7 @@
         </activity>
 
         <service
-            android:name=".service.SingBoxService"
+            android:name=".service.OpenWorldService"
             android:exported="false"
             android:foregroundServiceType="specialUse"
             android:process=":bg"
@@ -98,7 +98,7 @@
             android:process=":bg" />
 
         <service
-            android:name=".ipc.SingBoxIpcService"
+            android:name=".ipc.OpenWorldIpcService"
             android:exported="false"
             android:process=":bg" />
 
